adds empty structs and classes for planner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.8)
 project(Bachelor)
 
 add_subdirectory(visualizer)
+add_subdirectory(planner)
 
 add_executable(Bachelor main.cpp)
-target_link_libraries(Bachelor visualizer)
+target_link_libraries(Bachelor visualizer planner)
 
 add_custom_command(
     TARGET Bachelor
