refactors visualizer and fixes height cost calcualtion

--- a/planner/src/CMakeLists.txt
+++ b/planner/src/CMakeLists.txt
@@ -7,10 +7,16 @@ add_library(planner ${SRC})
 
 #message(${SRC})
 
+
+
+
 target_include_directories(planner PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
         $<INSTALL_INTERFACE:../include>
-        PRIVATE ../include)
+        PRIVATE ../include
+        PUBLIC ../../
+        PUBLIC ../../visualizer/include
+        )
 
 target_compile_features(planner
         PUBLIC cxx_lambdas cxx_auto_type
