--- a/visualizer/CMakeLists.txt
+++ b/visualizer/CMakeLists.txt
@@ -5,7 +5,8 @@ add_library(visualizer
 target_include_directories(visualizer PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
-    PRIVATE include)
+    PRIVATE include
+		PUBLIC ../)
 
 target_compile_features(visualizer
     PUBLIC cxx_lambdas cxx_auto_type
