refactors astar test implementations into their own derived classes

--- a/planner/src/CMakeLists.txt
+++ b/planner/src/CMakeLists.txt
@@ -19,5 +19,8 @@ target_include_directories(planner PUBLIC
         )
 
 target_compile_features(planner
-        PUBLIC cxx_lambdas cxx_auto_type
-        PRIVATE cxx_lambdas cxx_auto_type)
+        PUBLIC cxx_lambdas cxx_auto_type #cxx_generalized_initializers cxx_aggregate_default_initializers
+        PRIVATE cxx_lambdas cxx_auto_type) #cxx_generalized_initializers cxx_aggregate_default_initializers)
+
+#set_property(TARGET planner PROPERTY CXX_STANDARD 20)
+#set_property(TARGET planner PROPERTY CXX_STANDARD_REQUIRED ON)
